--- a/pricing.html
+++ b/pricing.html
@@ -35,40 +35,92 @@
 
 
     <section>
-        <div class="container">
+        <div class="container-fluid mt-4">
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="card">
-                        <img src="sources/images/laptop.png" class="card-img-top" alt="Laptop image">
-                        <div class="card-body">
-                            <h5 class="card-title">Laptop</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Add to trolley</a>
+
+                <div class="col-lg-1">
+
+                </div>
+
+                <div class="col-lg-8 col-md-12">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6">
+                            <div class="card mt-4">
+                                <img src="sources/images/laptop.png" class="card-img-top" alt="Laptop image">
+                                <div class="card-body">
+                                    <h5 class="card-title">Laptop</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="sources/images/controller.png" class="card-img-top" alt="Controller image">
+                                <div class="card-body">
+                                    <h5 class="card-title">Controller</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="sources/images/acc.png" class="card-img-top" alt="ACC image">
+                                <div class="card-body">
+                                    <h5 class="card-title">ACC</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="sources/images/gaming pc.png" class="card-img-top" alt="Gamin ps image">
+                                <div class="card-body">
+                                    <h5 class="card-title">Gaming pc</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="sources/images/gpu.png" class="card-img-top" alt="GPU image">
+                                <div class="card-body">
+                                    <h5 class="card-title">GPU</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="sources/images/other.png" class="card-img-top" alt="Others image">
+                                <div class="card-body">
+                                    <h5 class="card-title">Others</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Add to trolley</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="card">
-                        <img src="sources/images/cpu.png" class="card-img-top" alt="CPU image">
-                        <div class="card-body">
-                            <h5 class="card-title">CPU</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Add to trolley</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="card">
-                        <img src="sources/images/controller.png" class="card-img-top" alt="Controller image">
-                        <div class="card-body">
-                            <h5 class="card-title">Controller</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Add to trolley</a>
-                        </div>
-                    </div>
+
+                <div class="col-lg-3 col-md-12">
+
                 </div>
 
             </div>
