added right sidebar

--- a/pricing.html
+++ b/pricing.html
@@ -120,6 +120,26 @@
                 </div>
 
                 <div class="col-lg-3 col-md-12">
+                    <div class="row px-2">
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                    </div>
 
                 </div>
 
