--- a/pricing.html
+++ b/pricing.html
@@ -37,21 +37,20 @@
     <section>
         <div class="container-fluid mt-4">
             <div class="row">
-
                 <div class="col-lg-1">
-
                 </div>
 
                 <div class="col-lg-8 col-md-12">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="card mt-4">
-                                <img src="sources/images/laptop.png" class="card-img-top" alt="Laptop image">
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <a href="#"><img src="sources/images/laptop.png" class="card-img-top" alt="Laptop image"></a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Laptop</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk
-                                        of the card's content.</p>
+                                    <h5 class="card-title"><a href="#">Laptop</a></h5>
+                                    <p class="card-text"><a href="#">
+                                        Some quick example text to build on the card title and make up
+                                            the bulk of the card's content.
+                                    </a></p>
                                     <a href="#" class="btn btn-primary">Add to trolley</a>
                                 </div>
                             </div>
