configured and adapted the carousel on the main page

--- a/pricing.html
+++ b/pricing.html
@@ -44,13 +44,14 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 mt-4">
                             <div class="card">
-                                <a href="#"><img src="sources/images/laptop.png" class="card-img-top" alt="Laptop image"></a>
+                                <a href="#"><img src="sources/images/laptop.png" class="card-img-top"
+                                        alt="Laptop image"></a>
                                 <div class="card-body">
                                     <h5 class="card-title"><a href="#">Laptop</a></h5>
                                     <p class="card-text"><a href="#">
-                                        Some quick example text to build on the card title and make up
+                                            Some quick example text to build on the card title and make up
                                             the bulk of the card's content.
-                                    </a></p>
+                                        </a></p>
                                     <a href="#" class="btn btn-primary">Add to trolley</a>
                                 </div>
                             </div>
@@ -130,7 +131,8 @@
                                 mollitia quibusdam. <a href="#">Learn more >>></a></p>
                         </div>
                         <div class="col-lg-12 sidebar my-4">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia error sequi saepe animi
+                                illum excepturi veniam quaerat, esse
                                 deleniti. <a href="#">Learn more >>></a></p>
                         </div>
                         <div class="col-lg-12 sidebar my-4">
@@ -139,9 +141,7 @@
                                 deleniti. <a href="#">Learn more >>></a></p>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </section>
