--- a/index.html
+++ b/index.html
@@ -34,7 +34,152 @@
     </header>
 
     <section>
+        <div class="container-fluid mt-4">
+            <div class="row">
+                <div class="col-lg-1">
+                </div>
+                <div class="col-lg-8 col-md-12">
+                    <div class="row">
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                                    aria-label="Slide 6"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/acc.png" alt="ACC image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/controller.png" alt="Controller image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/cpu.png" alt="CPU image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/gaming pc.png" alt="ACC image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/gpu.png" alt="ACC image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                                <img src="sources/images/laptop.png" alt="ACC image" class="w-100">
+                                            </div>
+                                            <div class="col-lg-6 col-md-6 slide-text">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+                                                    error veniam, ipsum, modi est ipsa quis fuga repellat dignissimos
+                                                    nobis quas dolorem iste minus nostrum?</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-lg-3 col-md-12">
+                    <div class="row px-2">
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia error sequi saepe animi
+                                illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>Lorem ipsum dolor adipisicing elit. Odit, suscipit eius vero modi
+                                mollitia quibusdam. Quia error sequi saepe animi illum excepturi veniam quaerat, esse
+                                deleniti. <a href="#">Learn more >>></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
