--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                                     <div class="d-block w-100">
                                         <div class="row">
                                             <div class="col-lg-6 col-md-6">
-                                                <img src="sources/images/controller.png" alt="Controller image" class="w-100">
+                                                <img src="sources/images/controller.png" alt="Controller image"
+                                                    class="w-100">
                                             </div>
                                             <div class="col-lg-6 col-md-6 slide-text">
                                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
@@ -183,8 +184,21 @@
     </section>
 
 
-    <footer>
-
+    <footer class="mt-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 footer-text text-center">
+                    <p>All rights Reserved 2024</p>
+                </div>
+                <div class="col-lg-4 col-md-12 footer-text text-center">
+                    <p>Contacts<br>Fedor<br>Our team</p>
+                </div>
+                <div class="col-lg-4 col-md-12 media-links">
+                    <img src="sources/images/yt.png" alt="YouTube image">
+                    <img src="sources/images/tg.png" alt="Telegram image">
+                </div>
+            </div>
+        </div>
     </footer>
 
 
