--- a/pricing.html
+++ b/pricing.html
@@ -33,7 +33,6 @@
         </nav>
     </header>
 
-
     <section>
         <div class="container-fluid mt-4">
             <div class="row">
@@ -146,9 +145,21 @@
         </div>
     </section>
 
-
-    <footer>
-
+    <footer class="mt-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 footer-text text-center">
+                    <p>All rights Reserved 2024</p>
+                </div>
+                <div class="col-lg-4 col-md-12 footer-text text-center">
+                    <p>Contacts<br>Fedor<br>Our team</p>
+                </div>
+                <div class="col-lg-4 col-md-12 media-links">
+                    <img src="sources/images/yt.png" alt="YouTube image">
+                    <img src="sources/images/tg.png" alt="Telegram image">
+                </div>
+            </div>
+        </div>
     </footer>
 
 
