added media links to navbar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pricing.html">Pricing</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><img src="sources/images/yt.png" alt="YouTube image"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><img src="sources/images/tg.png" alt="Telegram image"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -182,7 +191,6 @@
             </div>
         </div>
     </section>
-
 
     <footer class="mt-4">
         <div class="container-fluid">
