--- a/pricing.html
+++ b/pricing.html
@@ -27,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="pricing.html">Pricing</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><img src="sources/images/yt.png" alt="YouTube image"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><img src="sources/images/tg.png" alt="Telegram image"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
