--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
+
+                        <div class="col-lg-12 col-md-12 mt-4 text-center">
+                            <p>Can We help You?</p>
+                        </div>
+                        <div class="col-lg-12 col-md-12 text-center">
+                            <a href="#"><img src="sources/images/phone.png" alt="Phone image" style="width: 35px;"></a>
+                        </div>
+
                     </div>
                 </div>
 
