--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <p>Can We help You?</p>
                         </div>
                         <div class="col-lg-12 col-md-12 text-center">
-                            <a href="#"><img src="sources/images/phone.png" alt="Phone image" style="width: 35px;"></a>
+                            <a href="#"><img class="call-anim" src="sources/images/phone.png" alt="Phone image" style="width: 35px;"></a>
                         </div>
 
                     </div>
