--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
                         </div>
 
                         <div class="col-lg-12 col-md-12 mt-4 text-center">
+                            <button type="button" class="btn btn-outline-primary my-4 btn-lg">Show More</button>
+                        </div>                        
+                        <div class="col-lg-12 col-md-12 mt-4 text-center">
                             <p>Can We help You?</p>
                         </div>
                         <div class="col-lg-12 col-md-12 text-center">
