--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="sources/styles/my-styles.css">
+    <link rel="stylesheet" href="sources/styles/bg-video.css">
     <link rel="icon" type="image/png" href="sources/images/Logo.png">
     <title>The best day!</title>
 </head>
@@ -44,6 +45,14 @@
     </header>
 
     <section>
+        <div class="bg-video">
+            <video type="video/mp4" src="sources/videos/15 seconds.mp4" autoplay muted loop></video>
+            <div class="effects"></div>
+            <div class="video-text">
+                <h1>FUTURE'S HERE</h1>
+            </div>
+        </div>
+
         <div class="container-fluid mt-4">
             <div class="row">
                 <div class="col-lg-1">
